CodGram.gram
S -> PROGRAMA eof.
PROGRAMA -> LDS sec LIS.
LDS -> DECLARACION RLDS.
RLDS -> nxt DECLARACION RLDS
	| .
DECLARACION -> num var
	| bool var.
LIS -> INSTRUCCION RLIS.
RLIS -> nxt INSTRUCCION RLIS
	| .
INSTRUCCION -> var asig EXP0.
EXP0 -> EXP1 R0.
R0 -> OP0 EXP1 R0
	| .
EXP1 -> EXP2 R1.
R1 -> and EXP1
	| or EXP2
	| .
EXP2 -> EXP3 R2.
R2 -> OP2 EXP3 R2
	| .
EXP3 -> EXP4 R3.
R3 -> OP3 EXP4 R3
	| .
EXP4 -> menos EXP4
	| not EXP5
        | EXP5.
EXP5 -> numr
	| var
        | true
        | false
	| pap EXP0 pci.
OP0 -> mas
	| menos.
OP2 -> may
	| men
	| mayi
	| meni
	| igual
	| dist.
OP3 -> por
	| div.
